#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5)
AC_INIT(frameInspector, 1.25, Michael_Uman@sdesigns.com)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([src/viewApp.cpp])
AM_CONFIG_HEADER([config.h])
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AM_OPTIONS_WXCONFIG()
AM_PATH_WXCONFIG(2.7.0, wxWin=1)

if test "$wxWin" != 1; then
	AC_MSG_ERROR([
		wxWindows version 2.7.0 must be installed on the system
		but wx-config script could not be found.
	])
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_LIB([gcrypt], [gcry_md_open], 
	[opt_gcrypt_installed=1],
	[opt_gcrypt_installed=0])

if test "$opt_gcrypt_installed" = "0"; then
	AC_MSG_ERROR([Please install libgcrypt11-dev])
else
	AC_DEFINE([HAVE_LIBGCRYPT], [1], [Define to '1' if libgcrypt is available])
	LIBS+=-lgcrypt
fi

# Check for FAM header
#AC_CHECK_HEADER([fam.h], opt_enable_fam=yes, opt_enable_fam=no)

AC_ARG_ENABLE([fam],
	[  --enable-fam Enable File Alteration monitor],
	[opt_enable_fam=$enableval])

AC_ARG_ENABLE([optimize],
	[  --enable-optimize Enable optimizations],
	[opt_optimize=$enableval])

AC_ARG_ENABLE([debug],
	[  --enable-debug    Enable debug messages],
	[opt_debug_build=$enableval])

if test "$opt_debug_build" = yes; then
	DEBUGFLAGS="-D_ENABLE_DEBUG"
fi

if test "$opt_enable_fam" = yes; then
	AC_DEFINE([HAVE_FAM], [1], [Define to '1' if FAM is available])
	AM_CONDITIONAL(INCLUDE_FAM, true)
	LIBS="-lfam"
else
	AM_CONDITIONAL(INCLUDE_FAM, false)
fi

if test "$opt_optimize" = yes; then
	OPTIMIZE="-march=pentium4 -msse2 -mfpmath=sse"
fi


CPPFLAGS="$OPTIMIZE $DEBUGFLAGS $WX_CXXFLAGS"
LIBS="$WX_LIBS $LIBS -lpopt"

AC_CONFIG_FILES([Makefile
                 src/Makefile
				 deinterlace/Makefile])
AC_OUTPUT
