bin_PROGRAMS=frameInspector

frameInspector_SOURCES=cpupack.h dbgutils.h frame.cpp frame.h imageBuffer.cpp imageBuffer.h \
					imageScroller.cpp imageScroller.h viewApp.cpp viewApp.h	types.h			\
					YUV420ImageBufferFile.cpp YUV420ImageBufferSplit.cpp					\
					misc_utils.cpp Dialogs.cpp hashDialog.cpp GridSettingsDialog.cpp		\
					YUV420ImageBufferFile.h YUV420ImageBufferSplit.h						\
					DumpImageBuffer.cpp DumpImageBuffer.h dumpInternals.cpp dumpInternals.h 

if INCLUDE_FAM
frameInspector_SOURCES+=wxFAM.cpp wxFAM.h
endif

